src/test/deca/context/invalid/created/binary_exp/op_bool/and_boolean_A.deca
// Description :
//    test and entre un boolean et un A
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 12: (3.33) Type gauche boolean. Type droit A Type attendu: ‘boolean’
class A{}
{
boolean a;
A b;
boolean c = a && b;
}
